--- a/index/index.html
+++ b/index/index.html
@@ -1,1 +1,31 @@
+<!DOCTYPE html>
+<html lang="en">
+ <head>
+    <meta charset="UTF-8">
+    <link  href="css/style.css" rel="stylesheet">
+    <title>Laba 4</title>
+ </head>
+ <body>
+ <h1>Main caption</h1>
+ <div class="row">
 
+ <div class="Main">
+   <div class="MainCaption">
+     <div class="Caption" id="coll1"><p id="cap1">Caption 1</p></div>
+  </div>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ducimus architecto eos illo earum harum autem, aliquam dolor veritatis repellat aut culpa voluptas, inventore voluptatum similique quidem delectus cum expedita!.Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint ducimus architecto eos illo earum harum autem, aliquam dolor veritatis repellat aut culpa voluptas, inventore voluptatum similique quidem delectus cum expedita!</p>
+ </div>
+
+ <div class="Main">
+   <div class="Caption" id="coll2"><p id="cap2">Caption 2</p></div>
+   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure accusamus voluptatem nam. Reiciendis labore est, cum ex odit totam voluptatum exercitationem earum voluptatibus necessitatibus fugiat molestias quibusdam voluptatem eligendi quidem? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure accusamus voluptatem nam. Reiciendis labore est, cum ex odit totam voluptatum exercitationem earum voluptatibus necessitatibus fugiat molestias quibusdam voluptatem eligendi quidem?</p>
+ </div>
+
+  <div class="Main">
+    <div class="Caption" id="coll3"><p id="cap3">Caption 3</p></div>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur nulla sequi dolores accusamus, repudiandae nobis ipsam eaque? Quasi sapiente harum, id reprehenderit ducimus velit perferendis ipsum, iure incidunt minus quaerat.Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur nulla sequi dolores accusamus, repudiandae nobis ipsam eaque? Quasi sapiente harum, id reprehenderit ducimus velit perferendis ipsum, iure incidunt minus quaerat.</p>
+  </div>
+
+  </div>
+ </body>
+</html>
